SFUSA/force-app/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Brand_Quality__c.field-meta.xml
<CustomField>
        <fullName>Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Forecast Snapshots Weekly</relationshipLabel>
        <relationshipName>Forecast_Snapshots_Weekly</relationshipName>
        <type>Lookup</type>
    </CustomField>