SFUSA/force-app/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Campaign__c.field-meta.xml
<CustomField>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Forecast Snapshots Weekly</relationshipLabel>
        <relationshipName>Forecast_Snapshots_Weekly</relationshipName>
        <type>Lookup</type>
    </CustomField>