SFUSA/force-app/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Campaign_Forecast_Amount__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Forecast_Amount__c</fullName>
        <label>Campaign Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>