SFUSA/force-app/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Forecast_Snapshot_Monthly__c.field-meta.xml
<CustomField>
        <fullName>Forecast_Snapshot_Monthly__c</fullName>
        <label>Forecast Snapshot Monthly</label>
        <referenceTo>Forecast_Snapshot__c</referenceTo>
        <relationshipLabel>Forecast Snapshots Weekly</relationshipLabel>
        <relationshipName>Forecast_Snapshots_Weekly</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>