SFUSA/force-app/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Forecast_Year__c.field-meta.xml
<CustomField>
        <fullName>Forecast_Year__c</fullName>
        <formula>TEXT(YEAR(Forecast_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Year</label>
        <type>Text</type>
    </CustomField>