SFUSA/force-app/main/default/objects/Forecast_Snapshot_Weekly__c/recordTypes/Automated.recordType-meta.xml
<RecordType>
        <fullName>Automated</fullName>
        <active>true</active>
        <label>Automated</label>
    </RecordType>